--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:layout_editor_absoluteY="81dp">
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="17dp"
         android:layout_height="wrap_content"
         android:="@+id/editText"
         tools:layout_editor_absoluteX="182dp"
@@ -18,6 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:="@+id/button1"
+        android:text="@string/submit"
         tools:layout_editor_absoluteX="50dp"
         tools:layout_editor_absoluteY="182dp" />
 
@@ -25,6 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:="@+id/button2"
+        android:text="@string/list"
         tools:layout_editor_absoluteX="262dp"
         tools:layout_editor_absoluteY="182dp" />
 
